6.11.6 kernel panic, divide error - RX5700XT
Brief summary of the problem:
Related to #3693 (closed) and Cosmic DE, but a different issue (and Navi 10 GPU), hence the new bug.
Testing the latest release (1.0.0 alpha3), whenever I login to the DE from cosmic-greeter, I get a kernel panic with divide error. This is 100% reproducible, I've not been able to login successfully to the DE.
I've tried looking for other bug reports, but found nothing. Applying the patches provided in the other bug -> same problem, no changes.
The only vaguely similar problem/patch I've found is from 2021: https://lists.freedesktop.org/archives/amd-gfx/2021-March/060754.html
Hardware description:
- CPU: Ryzen 9 5950X
- GPU: 09:00.0 VGA compatible controller [0300]: Advanced Micro Devices, Inc. [AMD/ATI] Navi 10 [Radeon RX 5600 OEM/5600 XT / 5700/5700 XT] [1002:731f] (rev c1)
- System Memory: 64G DDR4 3600MHz
- Display(s): 1x Gigabyte M28U 3840x2160 up to 144Hz
- Type of Display Connection: DP
System information:
- Distro name and Version: Gentoo
- Kernel version: 6.11.6
- Custom kernel: gentoo-sources plus patches collected from other bug(s):
- 0001-drm-amd-display-increase-max-surfaces-aligned-to-pla.patch
- 0002-drm-amd-display-add-warnings-for-MAX_SURFACES-mismat.patch
- prevent-index-out-of-bounds.patch
How to reproduce the issue:
- System boots, cosmic-greeter displays and works fine
- Input password
- System freezes, kernel panics, reboots
Attached files:
Log files (for system lockups / game freezes / crashes)
dmesg.txt 1_decoded_stack_trace.txt 2_decoded_kernel_panic.txt